# langchain_mongodb_atlas_management

./: .gitignore  README.md  requirements.txt  setup.cfg  test_mongodb_atlas.ipynb
src/mongodb_atlas/: __init__.py  mongodb_model.py  vector_index_manager.py
