[metadata]
name = langchain_mongodb_atlas_management
version = 0.1.0
description = Easily manage MongoDB Atlas vector search with LangChain using OpenAI or HuggingFace embeddings
author = BWKBH
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src